Fixed style for active tab so is readable on mouseover
git-svn-id: https://svn.internet2.edu/svn/i2mi/trunk@3046 bc24b658-cf39-4249-b827-e3526eaaeb42

--- a/grouper-ui/webapp/i2mi/signet.css
+++ b/grouper-ui/webapp/i2mi/signet.css
@@ -11,6 +11,10 @@ a {
 	text-width:100%;
 	}
 
+a.selectedTab:hover {
+	text-decoration: none;
+	color: #FFFFFF; 
+}
 	
 a:hover {
 	text-decoration: underline; 
